[project]
name = "pnw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "hydra-core>=1.3.0",
    "peft>=0.19.1",
    "torch>=2.11.0",
    "torch-fidelity>=0.4.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "wandb>=0.26.0",
]
